--- a/ansible/files/mesos-master.service
+++ b/ansible/files/mesos-master.service
@@ -4,7 +4,7 @@ After=network.target cloud-final.service
 Wants=network.target
 
 [Service]
-ExecStart=/usr/local/sbin/mesos-master --zk=
+ExecStart=/opt/mesos/build/bin/mesos-master.sh
 RestartSec=20
 LimitNOFILE=16384
 
