--- a/ansible/tasks/mesos.yml
+++ b/ansible/tasks/mesos.yml
@@ -1,4 +1,35 @@
-- name: Mesos | Install Mesos Packages
+- name: Mesos | Install Base Components
   yum: name={{item}} state=present
   with_items:
-    - mesos
+    - python-devel
+    - zlib-devel
+    - libcurl-devel
+    - openssl-devel
+    - cyrus-sasl-devel
+    - cyrus-sasl-md5
+    - apr-devel
+    - apr-util-devel
+    - http://opensource.wandisco.com/centos/7/svn-1.9/RPMS/x86_64/serf-devel-1.3.7-1.x86_64.rpm
+    - bison
+    - byacc
+    - cscope
+    - diffstat
+    - flex
+    - gcc
+    - gcc-c++
+    - gettext
+    - indent
+    - intltool
+    - libtool
+    - patch
+    - patchutils
+    - rcs
+    - subversion-devel
+    - swig
+    - systemtap
+
+- name: Meoso | Install Maven
+  script: scripts/install-maven.sh creates=/opt/maven
+
+- name: Meoso | Install Mesos
+  script: scripts/install-mesos.sh creates=/opt/mesos
